@@ -1,4 +1,8 @@
 SVN Version
+	* Fixed some threadsafty issues in the ServicesManager class.
+	* Fixed error message sending issue.
+	* Added ability to get/remove device from the list of devices used for
+	sending/receiving raw messages by ServicesManager class.
 
 2010-02-14 Version 1.0.0
 	* Added singleton factory for serializers. Explicit serializer
